--- a/api01/src/main/resources/application.properties
+++ b/api01/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.application.name=api01
-
-## ?? ??? 80? ?????? ???? ?????.
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
@@ -10,12 +7,12 @@ spring.datasource.password=webuser
 logging.level.org.springframework=info
 logging.level.org.zerock=debug
 
-logging.level.org.springframework.security=debug
+logging.level.org.springframework.security=trace
 
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-## 797 JWT secret code ramdom
+
 org.zerock.jwt.secret=hello1234567890hello1234567890hello1234567890
